# Guarda-Meu-lanche

./: .env  App.js  README.md  app.json  babel.config.js  eas.json  firebase.js  package-lock.json  package.json
.expo/: settings.json
.lapce/: run.toml
android/: settings.gradle
android/app/: build.gradle
api/: .env.example  .gitignore  app.js  package.json
components/: Back.js  Background.js  CategoryFood.js  CupertinoFooter1.js  CupertinoFooter2.js  EmailIput.js  FoodAreaCard.js  FoodBanner.js  FoodItemCard.js  Lanches.js  LogoPrincipal.js  LojaItem.js  RestaurantsCard.js  SeachBar.js  Userpicte.js  codigo.js
email_sender/: Cargo.toml
funçoes/: fbUriToFirebaseStorage.js
screens/: CarrinhoScreem.js  ConfirmaçaoScreem.js  EmailCode.js  EsqueciaSenha.js  Home.js  LoginScreen.js  MyOrders.js  Notificacoes.js  P1-tela.js  PraçasScreen.js  ProdutoScreen.js  RegisterScreen.js  ResetPassWord.js  Terms.js  UploadImageScreen.js  UploadScreen.js  UserScreem.js  VendasScreem.js  VendasScreen.js  a.js  carinho.js  codigoScreem.js  user.js
server/: .env  package-lock.json  package.json  server.js
styles/: EsqueciaSenhaStyles.js  LoginScreenStyles.js  RegisterScreenStyles.js  ResetPasswordStyles.js
web/email_sender/: Cargo.toml
web/email_sender/migrations/: 20241030030853_create_password_reset_codes.sql
web/email_sender/src/: app_state.rs  main.rs
web/email_sender/src/models/: mod.rs  password_reset.rs
web/email_sender/src/routes/: mod.rs  send_code.rs  send_password_code.rs
web/email_sender/templates/: password_code.html  verification_code.html
(+183 files in other folders)
