[package]
name = "email_sender"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = "0.10.0-rc.3"
tower = "0.4"
askama = "0.11"
dotenv = "0.15.0"
rand = "0.8.5"
sqlx = { version = "0.8.2", features = ["runtime-tokio","postgres","time", "chrono", "time"] }
features = "0.10.0"
chrono = { version = "0.4.38", features = ["serde"] }
time = "0.3.36"

